# fractal_opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/external_libs/glad/include/glad/: gl.h
src/models/: line.cpp  line.h  triangle.h  vector.h  vector_2d.cpp  vector_2d.h  vector_3d.cpp  vector_3d.h
